force-app/main/default/objects/Vote__c.object
<CustomObject>
    <fields>
        <fullName>IdeaPost__c</fullName>
        <label>アイデア投稿</label>
        <referenceTo>IdeaPost__c</referenceTo>
        <relationshipLabel>アイデア投票</relationshipLabel>
        <relationshipName>ref_Vote_IdeaPost</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>ポイント</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoteType__c</fullName>
        <label>投票区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Like</fullName>
                </value>
                <value>
                    <fullName>DisLike</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>アイデア投票</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IdeaPost__c</columns>
        <columns>VoteType__c</columns>
        <columns>Points__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000000000}</displayFormat>
        <label>管理No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>